--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="twitter:card" content="player"> <!-- For X video preview -->
     <meta name="twitter:title" content="Saka Portfolio Video">
     <meta name="twitter:description" content="Watch my latest work!">
-    <meta name="twitter:image" content="https://port-njjc.onrender.com/port/thumbnail.jpg"> 
+    <meta name="twitter:image" content="https://ima-3cg5.onrender.com"> 
     <meta name="twitter:player" content="https://port-njjc.onrender.com/">
     <meta name="twitter:player:width" content="640">
     <meta name="twitter:player:height" content="360">
