--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="description" content="Portfolio showcase video by Saka">
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="player">
+    <meta name="twitter:site" content="pitchfoot"> <!-- Replace with your X handle -->
     <meta name="twitter:title" content="Saka Portfolio Video">
     <meta name="twitter:description" content="Watch my latest work!">
     <meta name="twitter:image" content="https://port-njjc.onrender.com/thumbnail.jpeg"> <!-- Absolute URL -->
     <meta name="twitter:player" content="https://port-njjc.onrender.com/"> <!-- Page URL -->
     <meta name="twitter:player:stream" content="https://port-njjc.onrender.com/20251001_104912.mp4"> <!-- Direct video URL -->
-    <meta name="twitter:player:width" content="640"> <!-- Match your video resolution -->
-    <meta name="twitter:player:height" content="360">
+    <meta name="twitter:player:width" content="720"> <!-- Portrait example; match video width -->
+    <meta name="twitter:player:height" content="1280">
+    
     <title>Saka Portfolio Video</title>
     <style>
         body {
@@ -67,4 +69,4 @@
         });
     </script>
 </body>
-</html>"
+</html>
